components/ProjectItem/projectItem.module.scss
$gap: 2rem;
$image-gap: 0.5rem;
$border-radius: 12px;

.wrapper,
.details,
.images,
.mobileImages,
.buttons {
	display: flex;
}

.details,
.images,
.buttons {
	flex-direction: column;
}

.wrapper {
	margin-bottom: 5rem;
	gap: $gap;
}

@media only screen and (max-width: $mobile-breakpoint) {
	.wrapper {
		flex-direction: column;
		gap: 1rem;
	}
}

.details {
	flex: 0.7;
}

.description {
	margin-left: 1.125rem;
	margin-top: $gap;

	li,
	p {
		font-size: 1.125rem;
	}
}

.buttons {
	gap: $gap;
}

.images {
	border: $image-gap solid var(--image-border);
	border-radius: 18px;
	box-shadow: 0 0 0 3px var(--image-border-edge);
	background-color: white;
	gap: $image-gap;
	align-self: flex-start;
	align-items: center;
	flex: 1;
	width: 100%;
}

.desktopImage,
.mobileImages img {
	width: 100%;
	height: auto;
	flex: 1;
}

.desktopImage {
	border-top-left-radius: $border-radius;
	border-top-right-radius: $border-radius;
}

.mobileImages {
	width: 100%;
	justify-content: space-between;
	gap: $image-gap;

	:first-child {
		border-bottom-left-radius: $border-radius;
	}

	:last-child {
		border-bottom-right-radius: $border-radius;
	}
}

